[gd_scene load_steps=2 format=3 uid="uid://bmrqd5ohx6pio"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_jrcbw"]

[node name="PauseMenu" type="Node"]
script = ExtResource("1_jrcbw")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(144, 122)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -53.0
offset_right = 64.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -52.0
offset_right = 64.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="on_continue"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="on_options"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="on_exit"]
